# cpp-spreadsheet

./: .gitignore  README.md
.github/workflows/: ci.yml
spreadsheet/: CMakeLists.txt  FormulaAST.cpp  FormulaAST.h  cell.cpp  cell.h  common.h  formula.cpp  main.cpp  sheet.cpp  sheet.h  structures.cpp
